[gd_scene load_steps=4 format=3 uid="uid://bephm2c7083cv"]

[ext_resource type="Script" uid="uid://3lhc6ibnf0mr" path="res://scenes/menus/inventory/inventory_slot.gd" id="1_67t2r"]

[sub_resource type="Gradient" id="Gradient_1oj6l"]
colors = PackedColorArray(0, 0, 0, 0.5, 1, 1, 1, 0.5)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nfqo5"]
gradient = SubResource("Gradient_1oj6l")
width = 32
height = 32
fill = 2
fill_from = Vector2(0.5, 0.5)

[node name="InventorySlot" type="Button"]
custom_minimum_size = Vector2(40, 40)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_67t2r")

[node name="TextureRect_BG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("GradientTexture2D_nfqo5")

[node name="TextureRect_FG" type="TextureRect" parent="TextureRect_BG"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="lblQuantity" type="Label" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 16.0
offset_right = 39.0
offset_bottom = 39.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6666667)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 2

[node name="PopupMenu" type="PopupMenu" parent="."]
